--- a/static/index.html
+++ b/static/index.html
@@ -1,262 +1,102 @@
-<!-- static/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>SAT Practice</title>
+<title>MathJax Self-Test</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+<style>
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  background: #f6f6f6;
+  padding: 40px;
+}
+.card {
+  background: white;
+  max-width: 800px;
+  margin: auto;
+  padding: 30px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+}
+pre {
+  background: #eee;
+  padding: 12px;
+  white-space: pre-wrap;
+}
+button {
+  padding: 10px 14px;
+  margin-top: 12px;
+}
+</style>
 
-<!-- ✅ MathJax config MUST come before the script -->
+<!-- ✅ MathJax config FIRST -->
 <script>
   window.MathJax = {
     tex: {
       inlineMath: [['$', '$']],
       displayMath: [['$$', '$$']]
     },
-    options: {
-      skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre']
-    },
     startup: {
-      typeset: false // we will typeset manually after injecting text
+      typeset: false
     }
   };
 </script>
-<!-- defer ensures script loads after HTML parse -->
-<script id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
-<style>
-body {
-  margin: 0;
-  font-family: 'Merriweather', serif;
-  background: #fafafa;
-  color: #2a2a2a;
-}
-header {
-  text-align: center;
-  padding: 60px 20px;
-  background: white;
-  border-bottom: 1px solid #eee;
-}
-.container {
-  max-width: 900px;
-  margin: 40px auto;
-  padding: 0 16px;
-}
-.card {
-  background: white;
-  padding: 40px;
-  border-radius: 8px;
-  border: 1px solid #ddd;
-}
-select, button {
-  width: 100%;
-  padding: 12px;
-  margin-top: 12px;
-  font-family: 'Merriweather', serif;
-}
-button {
-  background: #2a2a2a;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-button:disabled {
-  background: #ccc;
-  cursor: not-allowed;
-}
-.question-text {
-  white-space: pre-wrap;
-  line-height: 1.7;
-  font-size: 1.05rem;
-}
-.choice {
-  border: 1px solid #ddd;
-  border-radius: 6px;
-  padding: 14px 16px;
-  margin: 12px 0;
-  cursor: pointer;
-  transition: 0.15s;
-}
-.choice:hover { background: #f0f0f0; }
-.choice.correct {
-  background: #e8f5e9;
-  border-color: #2e7d32;
-}
-.choice.incorrect {
-  background: #fdecea;
-  border-color: #c62828;
-}
-.loading {
-  text-align: center;
-  font-style: italic;
-  color: #666;
-}
-.error {
-  border: 1px solid #f3b0b0;
-  background: #fff3f3;
-  padding: 14px 16px;
-  border-radius: 6px;
-  white-space: pre-wrap;
-}
-</style>
+<!-- ✅ MathJax loader -->
+<script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 </head>
 
 <body>
-<header>
-  <h1>SAT Practice</h1>
-</header>
 
-<div class="container">
-  <div class="card">
+<div class="card" id="box">
+  <h2>MathJax Self-Test</h2>
 
-    <select id="section">
-      <option value="">Select Section</option>
-      <option value="Reading and Writing">Reading and Writing</option>
-      <option value="Math">Math</option>
-    </select>
+  <p>This text should render math:</p>
 
-    <select id="topic">
-      <option value="">Select Topic</option>
-      <option>Algebra</option>
-      <option>Advanced Math</option>
-      <option>Problem-Solving and Data Analysis</option>
-      <option>Geometry and Trigonometry</option>
-    </select>
+  <p>
+    Inline: $x^2 + 1$<br><br>
+    Display:
+    $$\frac{3x^2 - 2x + 1}{x - 4}$$
+  </p>
 
-    <select id="difficulty">
-      <option>Easy</option>
-      <option selected>Medium</option>
-      <option>Hard</option>
-    </select>
+  <button id="run">Run MathJax</button>
 
-    <button id="generate">Generate Question</button>
-
-    <div id="output" style="margin-top:30px;"></div>
-
-  </div>
+  <h3>Status</h3>
+  <pre id="status"></pre>
 </div>
 
 <script>
-const API_ORIGIN = location.origin;
-const output = document.getElementById("output");
-const btn = document.getElementById("generate");
+const status = document.getElementById("status");
+const box = document.getElementById("box");
 
-function parseModelText(text) {
-  const q = text.match(/Question:\s*([\s\S]*?)Answer Choices:/)?.[1]?.trim() || "";
-  const a = text.match(/Answer Choices:\s*([\s\S]*?)Correct Answer:/)?.[1]?.trim() || "";
-  const c = text.match(/Correct Answer:\s*([A-D])/)?.[1] || "";
-  const e = text.match(/Explanation:\s*([\s\S]*)$/)?.[1]?.trim() || "";
-
-  const choices = a
-    .split(/\n(?=[A-D]\.)/)
-    .map(s => ({ letter: s[0], text: s.slice(2).trim() }))
-    .filter(x => x.letter && x.text);
-
-  return { q, choices, c, e };
+function log(msg) {
+  status.textContent += msg + "\n";
 }
 
-async function ensureMathJaxReady() {
-  // Wait until MathJax finishes initializing (critical!)
+document.getElementById("run").onclick = async () => {
+  status.textContent = "";
+
+  log("window.MathJax: " + (window.MathJax ? "PRESENT" : "MISSING"));
+
   if (!window.MathJax) return;
-  if (MathJax.startup?.promise) {
-    await MathJax.startup.promise;
-  }
-}
 
-async function typeset(nodes) {
-  if (!window.MathJax) return;
-  await ensureMathJaxReady();
-  MathJax.typesetClear(nodes);
-  await MathJax.typesetPromise(nodes);
-}
-
-btn.onclick = async () => {
-  output.innerHTML = `<div class="loading">Generating…</div>`;
-  btn.disabled = true;
+  log("MathJax.version: " + (MathJax.version || "unknown"));
 
   try {
-    const resp = await fetch(`${API_ORIGIN}/api/generate-question`, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        section: section.value,
-        topic: topic.value,
-        difficulty: difficulty.value
-      })
-    });
+    if (MathJax.startup?.promise) {
+      log("Waiting for startup...");
+      await MathJax.startup.promise;
+      log("Startup ready.");
+    }
 
-    const data = await resp.json();
-    if (!resp.ok) throw new Error(data?.error || `Request failed (${resp.status})`);
-
-    const text = data.text || "";
-    const { q, choices, c, e } = parseModelText(text);
-
-    // Build DOM safely: use textContent so LaTeX stays as plain text
-    output.innerHTML = "";
-
-    const qDiv = document.createElement("div");
-    qDiv.className = "question-text";
-    qDiv.textContent = q;
-    output.appendChild(qDiv);
-
-    const choiceEls = [];
-    choices.forEach(ch => {
-      const div = document.createElement("div");
-      div.className = "choice";
-      div.dataset.letter = ch.letter;
-
-      const strong = document.createElement("strong");
-      strong.textContent = `${ch.letter}. `;
-      div.appendChild(strong);
-
-      const span = document.createElement("span");
-      span.textContent = ch.text;
-      div.appendChild(span);
-
-      output.appendChild(div);
-      choiceEls.push(div);
-    });
-
-    const expl = document.createElement("div");
-    expl.id = "explanation";
-    expl.style.display = "none";
-    expl.style.marginTop = "20px";
-
-    const hr = document.createElement("hr");
-    expl.appendChild(hr);
-
-    const explText = document.createElement("div");
-    explText.className = "question-text";
-    explText.textContent = `Correct Answer: ${c}\n\n${e}`;
-    expl.appendChild(explText);
-
-    output.appendChild(expl);
-
-    // ✅ Actually render LaTeX
-    await typeset([output]);
-
-    choiceEls.forEach(el => {
-      el.onclick = async () => {
-        choiceEls.forEach(x => {
-          x.style.pointerEvents = "none";
-          x.classList.add(x.dataset.letter === c ? "correct" : "incorrect");
-        });
-
-        expl.style.display = "block";
-        await typeset([expl]);
-      };
-    });
-
-  } catch (err) {
-    output.innerHTML = "";
-    const box = document.createElement("div");
-    box.className = "error";
-    box.textContent = String(err?.message || err);
-    output.appendChild(box);
-  } finally {
-    btn.disabled = false;
+    log("Calling typesetPromise...");
+    MathJax.typesetClear([box]);
+    await MathJax.typesetPromise([box]);
+    log("SUCCESS ✅ Math rendered");
+  } catch (e) {
+    log("FAILED ❌");
+    log(String(e));
   }
 };
 </script>
