--- a/static/index.html
+++ b/static/index.html
@@ -7,46 +7,123 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
 
-<!-- ✅ MathJax (manual typeset) -->
+<!-- ✅ MathJax: support ALL standard delimiters -->
 <script>
   window.MathJax = {
-    tex: { inlineMath: [['$', '$']], displayMath: [['$$', '$$']] },
-    options: { skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre'] },
-    startup: { typeset: false }
+    tex: {
+      inlineMath: [
+        ['$', '$'],
+        ['\\(', '\\)']
+      ],
+      displayMath: [
+        ['$$', '$$'],
+        ['\\[', '\\]']
+      ],
+      processEscapes: true
+    },
+    options: {
+      skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+    },
+    startup: {
+      typeset: false
+    }
   };
 </script>
 <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
 <style>
-body { margin:0; font-family:'Merriweather', serif; background:#fafafa; color:#2a2a2a; }
-header { text-align:center; padding:60px 20px; background:#fff; border-bottom:1px solid #eee; }
-.container { max-width:900px; margin:40px auto; padding:0 16px; }
-.card { background:#fff; padding:40px; border-radius:8px; border:1px solid #ddd; }
-select, button { width:100%; padding:12px; margin-top:12px; font-family:'Merriweather', serif; }
-button { background:#2a2a2a; color:#fff; border:none; cursor:pointer; }
-button:disabled { background:#ccc; cursor:not-allowed; }
-.question-text { white-space:pre-wrap; line-height:1.7; font-size:1.05rem; }
-.choice { border:1px solid #ddd; border-radius:6px; padding:14px 16px; margin:12px 0; cursor:pointer; transition:.15s; }
-.choice:hover { background:#f0f0f0; }
-.choice.correct { background:#e8f5e9; border-color:#2e7d32; }
-.choice.incorrect { background:#fdecea; border-color:#c62828; }
-.loading { text-align:center; font-style:italic; color:#666; }
-.error { border:1px solid #f3b0b0; background:#fff3f3; padding:14px 16px; border-radius:6px; white-space:pre-wrap; }
+body {
+  margin: 0;
+  font-family: 'Merriweather', serif;
+  background: #fafafa;
+  color: #2a2a2a;
+}
+header {
+  text-align: center;
+  padding: 60px 20px;
+  background: white;
+  border-bottom: 1px solid #eee;
+}
+.container {
+  max-width: 900px;
+  margin: 40px auto;
+  padding: 0 16px;
+}
+.card {
+  background: white;
+  padding: 40px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+}
+select, button {
+  width: 100%;
+  padding: 12px;
+  margin-top: 12px;
+  font-family: 'Merriweather', serif;
+}
+button {
+  background: #2a2a2a;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+button:disabled {
+  background: #ccc;
+  cursor: not-allowed;
+}
+.question-text {
+  white-space: pre-wrap;
+  line-height: 1.7;
+  font-size: 1.05rem;
+}
+.choice {
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  padding: 14px 16px;
+  margin: 12px 0;
+  cursor: pointer;
+  transition: 0.15s;
+}
+.choice:hover { background: #f0f0f0; }
+.choice.correct {
+  background: #e8f5e9;
+  border-color: #2e7d32;
+}
+.choice.incorrect {
+  background: #fdecea;
+  border-color: #c62828;
+}
+.loading {
+  text-align: center;
+  font-style: italic;
+  color: #666;
+}
+.error {
+  border: 1px solid #f3b0b0;
+  background: #fff3f3;
+  padding: 14px 16px;
+  border-radius: 6px;
+  white-space: pre-wrap;
+}
 </style>
 </head>
 
 <body>
-<header><h1>SAT Practice</h1></header>
+
+<header>
+  <h1>SAT Practice</h1>
+</header>
 
 <div class="container">
   <div class="card">
+
     <select id="section">
       <option value="">Select Section</option>
       <option value="Reading and Writing">Reading and Writing</option>
       <option value="Math">Math</option>
     </select>
 
-    <select id="topic" disabled>
+    <select id="topic">
       <option value="">Select Topic</option>
     </select>
 
@@ -59,6 +136,7 @@ button:disabled { background:#ccc; cursor:not-allowed; }
     <button id="generate" disabled>Generate Question</button>
 
     <div id="output" style="margin-top:30px;"></div>
+
   </div>
 </div>
 
@@ -70,7 +148,6 @@ const difficultyEl = document.getElementById("difficulty");
 const btn = document.getElementById("generate");
 const output = document.getElementById("output");
 
-// ✅ Put your real RW topics here (edit as needed)
 const TOPICS_BY_SECTION = {
   "Math": [
     "Algebra",
@@ -88,39 +165,31 @@ const TOPICS_BY_SECTION = {
 
 function setTopicOptions(section) {
   topicEl.replaceChildren();
-
   const placeholder = document.createElement("option");
   placeholder.value = "";
   placeholder.textContent = "Select Topic";
   topicEl.appendChild(placeholder);
 
-  const topics = TOPICS_BY_SECTION[section] || [];
-  topics.forEach(t => {
+  (TOPICS_BY_SECTION[section] || []).forEach(t => {
     const opt = document.createElement("option");
     opt.value = t;
     opt.textContent = t;
     topicEl.appendChild(opt);
   });
 
-  topicEl.disabled = topics.length === 0;
-  topicEl.value = "";
-  updateGenerateEnabled();
+  topicEl.disabled = !TOPICS_BY_SECTION[section];
+  updateButton();
 }
 
-function updateGenerateEnabled() {
-  const ok = sectionEl.value && topicEl.value && difficultyEl.value;
-  btn.disabled = !ok;
+function updateButton() {
+  btn.disabled = !(sectionEl.value && topicEl.value && difficultyEl.value);
 }
 
-sectionEl.addEventListener("change", () => {
-  setTopicOptions(sectionEl.value);
-});
-
-topicEl.addEventListener("change", updateGenerateEnabled);
-difficultyEl.addEventListener("change", updateGenerateEnabled);
+sectionEl.onchange = () => setTopicOptions(sectionEl.value);
+topicEl.onchange = updateButton;
+difficultyEl.onchange = updateButton;
 
 async function typeset(nodes) {
-  if (!window.MathJax) return;
   await MathJax.startup.promise;
   MathJax.typesetClear(nodes);
   await MathJax.typesetPromise(nodes);
@@ -135,7 +204,7 @@ function parseModelText(text) {
   const choices = a
     .split(/\n(?=[A-D]\.)/)
     .map(s => ({ letter: s[0], text: s.slice(2).trim() }))
-    .filter(ch => ch.letter && ch.text);
+    .filter(x => x.letter && x.text);
 
   return { q, choices, c, e };
 }
@@ -158,10 +227,8 @@ btn.onclick = async () => {
     const data = await resp.json();
     if (!resp.ok) throw new Error(data?.error || `Request failed (${resp.status})`);
 
-    const text = data.text || "";
-    const { q, choices, c, e } = parseModelText(text);
+    const { q, choices, c, e } = parseModelText(data.text || "");
 
-    // ✅ DOM build (no innerHTML for LaTeX content)
     output.replaceChildren();
 
     const qDiv = document.createElement("div");
@@ -174,32 +241,16 @@ btn.onclick = async () => {
       const div = document.createElement("div");
       div.className = "choice";
       div.dataset.letter = ch.letter;
-
-      const strong = document.createElement("strong");
-      strong.textContent = `${ch.letter}. `;
-      div.appendChild(strong);
-
-      const span = document.createElement("span");
-      span.textContent = ch.text;
-      div.appendChild(span);
-
+      div.textContent = `${ch.letter}. ${ch.text}`;
       output.appendChild(div);
       choiceEls.push(div);
     }
 
     const expl = document.createElement("div");
-    expl.id = "explanation";
     expl.style.display = "none";
     expl.style.marginTop = "20px";
-
-    const hr = document.createElement("hr");
-    expl.appendChild(hr);
-
-    const explText = document.createElement("div");
-    explText.className = "question-text";
-    explText.textContent = `Correct Answer: ${c}\n\n${e}`;
-    expl.appendChild(explText);
-
+    expl.className = "question-text";
+    expl.textContent = `Correct Answer: ${c}\n\n${e}`;
     output.appendChild(expl);
 
     await typeset([output]);
@@ -222,13 +273,12 @@ btn.onclick = async () => {
     box.textContent = String(err?.message || err);
     output.appendChild(box);
   } finally {
-    // re-enable only if selections still valid
-    updateGenerateEnabled();
+    updateButton();
   }
 };
 
-// initialize topics on load (keeps topic disabled until section chosen)
-setTopicOptions(sectionEl.value);
+setTopicOptions("");
 </script>
+
 </body>
 </html>
